--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.0</junit.version>
         <mockito.version>5.5.0</mockito.version>
+        <sonar.organization>ImadAramanLib</sonar.organization>
+        <sonar.projectKey>ImadAramanLib_IA-LIB3_2025</sonar.projectKey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
